[package]
authors = ["Michael Lodder <redmike7@gmail.com>"]
categories = ["cryptography", "algorithms"]
description = "Extra Rust-Crypto elliptic-curve adaptors, functions, and macros"
documentation = "https://docs.rs/elliptic-curve-tools"
edition = "2024"
homepage = "https://github.com/mikelodder7/elliptic-curve-tools"
keywords = ["crypto", "elliptic", "ecc", "serialize", "digest"]
license = "Apache-2.0 OR MIT"
name = "elliptic-curve-tools"
readme = "README.md"
repository = "https://github.com/mikelodder7/elliptic-curve-tools"
version = "0.3.0-rc2"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]
alloc = ["elliptic-curve/alloc", "serde/alloc", "serdect/alloc"]
std = ["elliptic-curve/std", "serde/default", "serdect/alloc"]
# Bridge for curves still on the group/ff 0.13 traits (see the `legacy` module).
legacy = ["dep:group_013", "dep:ff_013", "dep:rand_core"]

[dependencies]
elliptic-curve = "0.14"
heapless = "0.9"
serde = { version = "1.0", default-features = false, optional = true }
serdect = { version = "0.4", default-features = false }
group_013 = { package = "group", version = "0.13", default-features = false, optional = true }
ff_013 = { package = "ff", version = "0.13", default-features = false, optional = true }
rand_core = { version = "0.10", default-features = false, optional = true }

[dev-dependencies]
bp256 = { version = "0.14.0-rc.15", features = ["arithmetic"] }
bp384 = { version = "0.14.0-rc.15", features = ["arithmetic"] }
ciborium = "0.2"
k256 = { version = "0.14.0-rc.15", features = ["arithmetic"] }
p256 = { version = "0.14.0-rc.15", features = ["arithmetic"] }
p384 = { version = "0.14.0-rc.15", features = ["arithmetic"] }
p521 = { version = "0.14.0-rc.15", features = ["arithmetic"] }
postcard = { version = "1.0", features = ["alloc", "use-std"] }
rstest = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"
serde_bare = "0.5"
serde_yaml = "0.9"
toml = "1.1.2"
