# Integration tests for the `legacy` feature: proves elliptic-curve-tools' sum_of_products
# works with curve crates still on the group/ff 0.13 ecosystem (curve25519-dalek-ml,
# ed448-goldilocks-plus, bls12_381_plus). Standalone workspace so these heavy 0.13 curve
# dependencies never touch the main crate's dependency graph or its strict CI.
[package]
name = "elliptic-curve-tools-interop-tests"
version = "0.0.0"
edition = "2024"
publish = false
license = "Apache-2.0 OR MIT"

[workspace]

[dev-dependencies]
elliptic-curve-tools = { path = "..", features = ["legacy"] }
group_013 = { package = "group", version = "0.13" }
ff_013 = { package = "ff", version = "0.13" }
subtle = "2.6"
curve25519-dalek-ml = { version = "4.3", features = ["group"] }
ed448-goldilocks-plus = "0.16"
bls12_381_plus = "0.8"
k256 = { version = "0.13.4", features = ["arithmetic"] }
